# azure-cost-optimizer

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
azure_cost_optimizer/: __init__.py  cli.py  demo.py  models.py  scanner.py
azure_cost_optimizer/analyzers/: base.py  compute.py  database.py  misc.py  networking.py  storage.py
azure_cost_optimizer/output/: console.py  report.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_export.py  test_models.py  test_scanner.py
